# kd-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  RECONSTRUCTION_NOTES.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_reconstructed_baseline.py  0002_reconstructed_authority_entities.py  0003_reconstructed_pdf_layout_facts.py  0004_project_claim_versions.py  0005_experiment_artifact_plans.py  0006_experiment_run_manifests.py  0007_assistant_sessions.py
backend/app/: __init__.py  agent_tool_models.py  api.py  assistant_models.py  config.py  demo_models.py  evidence_graph_models.py  experiment_plan_models.py  experiment_run_models.py  gold_dataset.py  main.py  models.py  plot_draft_models.py  project_claim_models.py  research_models.py  research_planning_models.py
backend/app/cli/: demo_acceptance.py  demo_start.py  evaluate_pdf_layout.py  ingest_gold.py  ingest_pdf.py  layout_gold_workflow.py  r2_acceptance.py
backend/app/data/: __init__.py
backend/tests/: test_agent_tools.py  test_api.py  test_assistant_session_repository.py  test_assistant_sessions.py  test_demo_acceptance_cli.py  test_demo_readiness.py  test_demo_start_cli.py  test_evidence_graph.py  test_experiment_plans.py  test_experiment_runs.py  test_gold_dataset.py  test_ingest_cli.py  test_layout_gold_workflow.py  test_neo4j_sync.py  test_pdf_contract.py  test_pdf_evaluation.py  test_pdf_layout_persistence.py  test_plot_drafts.py  test_project_claims.py  test_research_opportunities.py  test_storage.py
(+78 files in other folders)
