[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-agent-backend"
version = "0.2.0"
description = "Evidence-grounded paper reverse engineering API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "SQLAlchemy>=2.0,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.3,<9", "pytest-cov>=5,<7"]
pdf = ["PyMuPDF>=1.24,<2"]
infra = ["PyMySQL>=1.1,<2", "neo4j>=5.25,<6", "pymilvus>=2.5,<3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/gold/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
